--- a/src/app/components/full-cv-component/full-cv-component.component.css
+++ b/src/app/components/full-cv-component/full-cv-component.component.css
@@ -23,3 +23,16 @@ table, th, td {
 .heading__header--no-margin-bottom {
     margin-bottom: 0px;
 }
+
+.tech-grid {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+.tech-grid__titles {
+    
+}
+
+.tech-grid__badges {
+
+}
