--- a/src/app/components/full-cv-component/full-cv-component.component.css
+++ b/src/app/components/full-cv-component/full-cv-component.component.css
@@ -1,19 +1,18 @@
 :host {
     position: absolute;
-    height: 100%;
-    width: 320px;
-    border: 5px solid skyblue;
-    overflow-y: auto;    
+    max-width: 1000px;
 }
 
-table, th, td {
-    border: 1px solid black;
-}
 
 .heading {
     display: flex;
     justify-content: space-between;
-    margin: 0px 0px 5px 0px;
+    flex-wrap: wrap;
+}
+
+.heading__header {
+    margin-right: 5px; 
+    margin-bottom: 0px;    
 }
 
 .heading__header, .heading__date {
