--- a/src/app/components/full-cv-component/full-cv-component.component.html
+++ b/src/app/components/full-cv-component/full-cv-component.component.html
@@ -1,131 +1,88 @@
-<h1>Elliot Wilkinson</h1>
-<h4>Contact</h4>
-<pre>
-  <code>L: London</code>
-  <code>T: +447920752087</code>
-  <code>W: <a href="mailto:Elliot.Wilkinson@wilkware.co.uk">Elliot.Wilkinson@wilkware.co.uk</a></code>
-  <code>P: <a href="mailto:PlantPorridge@gmail.com">PlantPorridge@gmail.com</a></code>
-</pre>
-
-
-
-<h4>Education</h4>
-
-<div class="header-date">
-  <h5 class="heading__header heading__header--no-margin-bottom">University of Warwick</h5>
-  <span class="heading__date">'10 - '13</span>
+<div class="card card-header">
+  <h1 class="mb-0">Elliot Wilkinson</h1>
 </div>
 
-<table>
-  <tr>
-    <th colspan="2">Discrete Mathematics</th>
-  </tr>
-  <tr>
-    <td>Overall</td>
-    <td>2:1 (68%)</td>
-  </tr>
-  <tr>
-    <td>Final Year</td>
-    <td>1:1 (74.3%)</td>
-  </tr>
-</table>
-
-<div class="header-date">
-  <h5 class="heading__header heading__header--no-margin-bottom">Godalming College</h5>
-  <span class="heading__date">'08 - '10</span>
+<div class="card-header text-white bg-info">
+  <h4 class="mb-0">Contact</h4>
 </div>
-<table>
-  <tr>
-    <th colspan="2">A-Levels</th>
-  </tr>
-  <tr>
-    <td>Mathematics</td>
-    <td>A*</td>
-  </tr>
-  <tr>
-    <td>Further Mathematics</td>
-    <td>A</td>
-  </tr>
-  <tr>
-    <td>Computing</td>
-    <td>B</td>
-  </tr>
-  <tr>
-    <th colspan="2">AS-Levels</th>
-  </tr>
-  <tr>
-    <td>Economics</td>
-    <td>B</td>
-  </tr>
-  <tr>
-    <td>Physics</td>
-    <td>B</td>
-  </tr>
-</table>
 
-<div class="header-date">
-  <h5 class="heading__header heading__header--no-margin-bottom">Rodborough</h5>
-  <span class="heading__date">'03 - '08</span>
+<div class="card">
+  <pre class="mb-0">
+    <code title="Location">L: London</code>
+    <code title="Telephone">T: +447920752087</code>
+    <code title="Work Email">W: <a href="mailto:Elliot.Wilkinson@wilkware.co.uk">Elliot.Wilkinson@wilkware.co.uk</a></code>
+    <code title="Personal Email">P: <a href="mailto:PlantPorridge@gmail.com">PlantPorridge@gmail.com</a></code></pre>
 </div>
-<table>
-  <tr>
-    <th colspan="2">GCSE's</th>
-  </tr>
-  <tr>
-    <td>Mathematics</td>
-    <td>A</td>
-  </tr>
-  <tr>
-    <td>English Language</td>
-    <td>B</td>
-  </tr>
-  <tr>
-    <td>English Liturature</td>
-    <td>B</td>
-  </tr>
-  <tr>
-    <td>Grade B and Above</td>
-    <td>10</td>
-  </tr>
-</table>
 
-<h4>Work</h4>
+<div class="card-header text-white bg-info">
+  <h4 class="mb-0">Education</h4>
+</div>
+
+<div *ngFor='let education of educationHistory'>
+
+  <div class="card">
+    <div class="card-header heading">
+      <h5 class="card-title heading__header">{{education.school}}</h5>
+      <span class="heading__date text-muted">{{education.startDate | date:'MMM yy'}} - {{education.endDate | date:'MMM yy'}}</span>
+    </div>
+    <div class="card-body">
+      <table class="table table-bordered" *ngFor="let levelAndResults of education.levelAndResults">
+        <tr>
+          <th colspan="2">{{levelAndResults.level}}</th>
+        </tr>
+        <tr *ngFor="let result of levelAndResults.results">
+          <td>{{result.subject}}</td>
+          <td>{{result.result}}</td>
+        </tr>
+      </table>
+      <footer *ngIf="education.note" class="blockquote-footer">{{education.note}}</footer>
+    </div>
+  </div>
+</div>
+
+<div class="card-header text-white bg-info">
+  <h4 class="mb-0">Work</h4>
+</div>
 
 <div *ngFor='let work of workHistory'>
-  <div class="header-date">
-    <h5 class="heading__header heading__header--no-margin-bottom">{{work.company}}</h5>
-    <span class="heading__date">{{work.startDate | date:'MMM yy'}}</span>
-    <span> - </span>
-    <span class="heading__date">{{work.endDate | date:'MMM yy'}}</span>
-  </div>
-  <h5>{{work.jobTitle}}</h5>
-  <p>{{work.jobDescription}}</p>
-
-  <div class="tech-grid">
-
-    <b class="tech-grid__titles" *ngIf='work.techsCore'>Core Techs:</b>
-    <div class="tech-grid__badges" *ngIf='work.techsCore'>
-      <span *ngFor='let tech of work.techsCore' class="badge badge-primary">{{tech}}</span>
+  <div class="card">
+    <div class="card-header">
+      <div class="heading">
+        <h5 class="card-title heading__header">{{work.company}}</h5>
+        <span class="heading__date text-muted">{{work.startDate | date:'MMM yy'}} - {{work.endDate | date:'MMM yy'}}</span>
+      </div>
+      <h6 class="mb-0">{{work.jobTitle}}</h6>
     </div>
+    <div class="card-body">
+      <p>{{work.jobDescription}}</p>
 
-    <b class="tech-grid__titles" *ngIf='work.techsSub'>Sub Techs:</b>
-    <div class="tech-grid__badges" *ngIf='work.techsSub'>
-      <span *ngFor='let tech of work.techsSub' class="badge badge-secondary">{{tech}}</span>
-    </div>
+      <div class="tech-grid">
 
-    <b class="tech-grid__titles" *ngIf='work.tools'>Tools:</b>
-    <div class="tech-grid__badges" *ngIf='work.tools'>
-      <span *ngFor='let tool of work.tools' class="badge badge-info">{{tool}}</span>
-    </div>
+        <b class="tech-grid__titles" *ngIf='work.techsCore'>Core Techs:</b>
+        <div class="tech-grid__badges" *ngIf='work.techsCore'>
+          <span *ngFor='let tech of work.techsCore' class="badge badge-primary">{{tech}}</span>
+        </div>
 
-    <b class="tech-grid__titles" *ngIf='work.rolesCore'>Core Roles:</b>
-    <div class="tech-grid__badges" *ngIf='work.rolesCore'>
-      <span *ngFor='let role of work.rolesCore' class="badge badge-primary">{{role}}</span>
-    </div>
+        <b class="tech-grid__titles" *ngIf='work.techsSub'>Sub Techs:</b>
+        <div class="tech-grid__badges" *ngIf='work.techsSub'>
+          <span *ngFor='let tech of work.techsSub' class="badge badge-secondary">{{tech}}</span>
+        </div>
 
-    <b class="tech-grid__titles" *ngIf='work.rolesSub'>Sub Roles:</b>
-    <div class="tech-grid__badges" *ngIf='work.rolesSub'>
-      <span *ngFor='let role of work.rolesSub' class="badge badge-secondary">{{role}}</span>
+        <b class="tech-grid__titles" *ngIf='work.tools'>Tools:</b>
+        <div class="tech-grid__badges" *ngIf='work.tools'>
+          <span *ngFor='let tool of work.tools' class="badge badge-info">{{tool}}</span>
+        </div>
+
+        <b class="tech-grid__titles" *ngIf='work.rolesCore'>Core Roles:</b>
+        <div class="tech-grid__badges" *ngIf='work.rolesCore'>
+          <span *ngFor='let role of work.rolesCore' class="badge badge-primary">{{role}}</span>
+        </div>
+
+        <b class="tech-grid__titles" *ngIf='work.rolesSub'>Sub Roles:</b>
+        <div class="tech-grid__badges" *ngIf='work.rolesSub'>
+          <span *ngFor='let role of work.rolesSub' class="badge badge-secondary">{{role}}</span>
+        </div>
+      </div>
     </div>
   </div>
 </div>
