--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,31 +7,6 @@
     grid-column-gap: 5px;    
 }
 
-@media (max-width: 600px) { 
-    .root-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr;
-    }
-    .panel__menu {
-        display: none;
-    }
-    .panel__profile {
-        display: grid;
-        grid-template-columns: 50px auto 1fr;
-    }
-    .panel__profile__logo {
-        width: 50px;
-    }
-    .panel__profile__company {
-        font-size: 2.5rem;
-        margin-bottom: 0;
-        color: lightcoral;
-    }
-    .panel__profile__person {
-        display: none;
-    }
-}
-
 .panel {
     background-color: ghostwhite;    
     /*grid-column-start: 1;
@@ -51,6 +26,15 @@
     overflow-y: auto;
 }
 
+.panel__menu li {
+    cursor: pointer;
+}
+
+.panel__menu__toggle {
+    display: none;
+    cursor: pointer;
+}
+
 .panel__profile {
 
 }
@@ -59,8 +43,8 @@
 
 }
 
-panel__profile__company {
-
+.panel__profile__company {
+    font-family: 'Quicksand', sans-serif;
 }
 
 .panel__profile__person {
@@ -76,4 +60,53 @@ panel__profile__company {
 .logo__circle {
     stroke: lightcoral; 
     stroke-width: 3;
+}
+
+@media (max-width: 600px) { 
+    .root-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+    }
+    .panel {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        border-top: lightcoral solid 2px;
+    }
+    .panel__menu {
+        grid-column: 1 / 3;
+    }
+    .panel__menu__toggle {
+        display: block;
+    }    
+    .panel__profile {
+        display: grid;
+        grid-template-columns: 50px auto 1fr;
+    }
+    .panel__profile__logo {
+        width: 50px;
+    }
+    .panel__profile__company {
+        font-size: 2.5rem;
+        margin-bottom: 0;
+        color: lightcoral;
+        height: 45px;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .panel__profile__person {
+        display: none;
+    }
+    .logo {
+        stroke-width: 8;
+    }
+    .logo__circle {
+        stroke-width: 4;
+    }
+}
+
+@media (min-width: 601px) {
+    .panel__menu {
+        display: block;
+    }
 }
