--- a/src/app/components/full-cv/full-cv.component.css
+++ b/src/app/components/full-cv/full-cv.component.css
@@ -3,6 +3,13 @@
     max-width: 1000px;
 }
 
+.card {
+    border-radius: 0;
+}
+
+.card-header > h4 {
+    text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
 
 .heading {
     display: flex;
