Decoupled code by creating components for each card layout. Implemented Projects section of the site.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,9 +35,7 @@
     <ul class="list-group ">
       <li routerLink="/home" routerLinkActive="active" class="list-group-item list-group-item-action"><b>Home</b></li>
       <li routerLink="/cv" routerLinkActive="active" class="list-group-item list-group-item-action"><b>Curriculum Vitae</b></li>
-      <li href="#" class="list-group-item list-group-item-action"><b>Anuglar Components</b></li>
-      <li href="#" class="list-group-item list-group-item-action">Add more here.</li>
-      <li href="#" class="list-group-item list-group-item-action disabled">In Progress...</li>
+      <li routerLink="/projects" routerLinkActive="active" class="list-group-item list-group-item-action"><b>Projects</b></li>
     </ul>
     </div>
   </div>
