--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,29 @@
-<p>
-  home works!
-</p>
+<div class="card">
+  <div class="card-header">
+    <h1 class="mb-0">Welcome!</h1>
+  </div>
+  <div class="card-body intro">
+    <img class="intro--profile" src="../../../assets/img/profile_zoom.jpg">
+    <div class="intro--description">
+      <p>
+        Welcome to Wilkware. I'm Elliot Wilkinson and this is a site to showcase myself and my work! I've just moved into the world
+        of contracting and realised I needed some sort of portfolio site- and here we are! This site is new so is pretty
+        bare at the moment but over the next few months I hope to rectify that by working on more projects and expanding
+        the scope of this site to some more interesting aspects of myself.
+      </p>
+      <p>
+        So about me.<br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for 4 years;
+        One in C, Two in C#+WPF, and One in Typescript+Angular. But along the way I have dabbled in a whole range of other
+        languages and technologies which can be viewed on my <a routerLink="/cv" routerLinkActive="active">CV</a>. Angular
+        has been a welcome relief after breaking free from the shakles of WPF, and it is the Framework I consider myself
+        well versed in. So I am now operating out of my own company, Wilkware Limited, offering my software engineering skills
+        with a focus on C# and Angular.
+      </p>
+      <p>
+        Outside of coding I am an avid runner and triathlete. Completing my first marathon in 2016 I vowed to do one a month in 2017,
+        but injuring has currently put that on hold. I have currently completed 6 marathons this year and hopefully I can
+        squeeze in another 6 once my injuring are healed!
+      </p>
+    </div>
+  </div>
+</div>
