--- a/src/app/components/full-cv/full-cv.component.html
+++ b/src/app/components/full-cv/full-cv.component.html
@@ -19,25 +19,7 @@
 </div>
 
 <div *ngFor='let education of educationHistory'>
-
-  <div class="card">
-    <div class="card-header heading">
-      <h5 class="card-title heading__header">{{education.school}}</h5>
-      <span class="heading__date text-muted">{{education.startDate | date:'MMM yy'}} - {{education.endDate | date:'MMM yy'}}</span>
-    </div>
-    <div class="card-body">
-      <table class="table table-bordered" *ngFor="let levelAndResults of education.levelAndResults">
-        <tr>
-          <th colspan="2">{{levelAndResults.level}}</th>
-        </tr>
-        <tr *ngFor="let result of levelAndResults.results">
-          <td>{{result.subject}}</td>
-          <td>{{result.result}}</td>
-        </tr>
-      </table>
-      <footer *ngIf="education.note" class="blockquote-footer">{{education.note}}</footer>
-    </div>
-  </div>
+  <app-education-card [education]=education></app-education-card>
 </div>
 
 <div class="card-header text-white bg-info">
@@ -45,44 +27,5 @@
 </div>
 
 <div *ngFor='let work of workHistory'>
-  <div class="card">
-    <div class="card-header">
-      <div class="heading">
-        <h5 class="card-title heading__header">{{work.company}}</h5>
-        <span class="heading__date text-muted">{{work.startDate | date:'MMM yy'}} - {{work.endDate | date:'MMM yy'}}</span>
-      </div>
-      <h6 class="mb-0">{{work.jobTitle}}</h6>
-    </div>
-    <div class="card-body">
-      <p>{{work.jobDescription}}</p>
-
-      <div class="tech-grid">
-
-        <b class="tech-grid__titles" *ngIf='work.techsCore'>Core Techs:</b>
-        <div class="tech-grid__badges" *ngIf='work.techsCore'>
-          <span *ngFor='let tech of work.techsCore' class="badge badge-primary">{{tech}}</span>
-        </div>
-
-        <b class="tech-grid__titles" *ngIf='work.techsSub'>Sub Techs:</b>
-        <div class="tech-grid__badges" *ngIf='work.techsSub'>
-          <span *ngFor='let tech of work.techsSub' class="badge badge-secondary">{{tech}}</span>
-        </div>
-
-        <b class="tech-grid__titles" *ngIf='work.tools'>Tools:</b>
-        <div class="tech-grid__badges" *ngIf='work.tools'>
-          <span *ngFor='let tool of work.tools' class="badge badge-info">{{tool}}</span>
-        </div>
-
-        <b class="tech-grid__titles" *ngIf='work.rolesCore'>Core Roles:</b>
-        <div class="tech-grid__badges" *ngIf='work.rolesCore'>
-          <span *ngFor='let role of work.rolesCore' class="badge badge-primary">{{role}}</span>
-        </div>
-
-        <b class="tech-grid__titles" *ngIf='work.rolesSub'>Sub Roles:</b>
-        <div class="tech-grid__badges" *ngIf='work.rolesSub'>
-          <span *ngFor='let role of work.rolesSub' class="badge badge-secondary">{{role}}</span>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-work-card [work]='work'></app-work-card>
 </div>
