Fixed up tests. Added travis file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,10 @@
       </h3>
       <h6 class="panel__profile__person">
         ElliotWilkinson / PlantPorridge
+        <br/>
+        <code title="Github"><a href="https://github.com/PlantPorridge" target="_blank">Github</a></code>            
       </h6>
+
     </div>
     <button type="button" class="panel__menu__toggle btn btn-light" data-toggle="collapse" data-target="#navbaritems">
       <span class="fa fa-bars"></span>
