--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,9 @@ html, body {
     width: 100%;
     overflow-y: hidden;
 }
+
+.list-group-item.active{
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
