--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,112 +1,78 @@
-.root-container {
+:host {
+    position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #333;
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    grid-column-gap: 5px;    
 }
 
-.panel {
-    background-color: ghostwhite;    
-    /*grid-column-start: 1;
-    grid-column-end: 2;*/
-}
-
-.content {
-    height: 100%;
+.nav-bar {
     position: relative;
-    background-color: ghostwhite;
-    /* border-top: 2px dashed rebeccapurple;
-    border-bottom: 2px dashed rebeccapurple; */
-    /*grid-column-start: 2;
-    grid-column-end: 3;*/
+    background-color: #3f51b5;
+    color: whitesmoke;
+    align-items: center;
+    z-index: 10;
+    display: grid;
+    grid-gap: 10px;
+    padding: 0px 10px;
+    grid-template-columns: [menu-col] auto [company-col] 1fr [profile-col] auto [nav-bar-end];
+}
+
+.nav-bar__toggle {
+    grid-column: menu-col / company-col;
+}
+
+.nav-bar__company {
+    grid-column: company-col / profile-col;
     display: flex;
-    justify-content: center;
-    overflow-y: auto;
 }
 
-.panel__menu li {
-    cursor: pointer;
+.nav-bar__profile {
+    grid-column: profile-col / nav-bar-end;
 }
 
-.panel__menu__toggle {
-    display: none;
-    cursor: pointer;
-}
-
-.panel__profile {
-
-}
-
-.panel__profile__logo {
-
-}
-
-.panel__profile__company {
-    font-family: 'Quicksand', sans-serif;
-}
-
-.panel__profile__person {
-
-}
-
-.logo {
-    stroke: lightcoral;
+.company__logo > circle {
+    stroke: whitesmoke; 
     stroke-width: 5;
+}
+
+.company__logo path {
+    stroke: whitesmoke;
+    stroke-width: 10;
     fill: transparent;
 }
 
-.logo__circle {
-    stroke: lightcoral; 
-    stroke-width: 3;
+.company__name {
+    margin: auto 0px;
 }
 
-@media (max-width: 600px) { 
-    .root-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr;
+.root-sidenav-container {
+    height: calc(100% - 50px);
+    width: 100%;
+    background-color: transparent;
+}
+
+.root-sidenav-container__sidenav {
+    height: 100%;
+    width: 300px;
+    background: #3f51b5;
+}
+
+.root-sidenav-container__content {
+    height: 100%;
+    width: 100%;
+    position: absolute;
     }
-    .panel {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        border-top: lightcoral solid 2px;
-    }
-    .panel__menu {
-        grid-column: 1 / 3;
-    }
-    .panel__menu__toggle {
-        display: block;
-    }    
-    .panel__profile {
-        display: grid;
-        grid-template-columns: 50px auto 1fr;
-    }
-    .panel__profile__logo {
-        width: 50px;
-    }
-    .panel__profile__company {
-        font-size: 2.5rem;
-        margin-bottom: 0;
-        color: lightcoral;
-        height: 45px;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    .panel__profile__person {
+
+.list-group-item.active {
+    background-color: #3f51b5;
+    border-color: #3f51b5;
+}
+
+.list-group-item-action {
+    cursor: pointer;
+}
+
+@media (max-width: 400px) {
+    .company__name {
         display: none;
-    }
-    .logo {
-        stroke-width: 8;
-    }
-    .logo__circle {
-        stroke-width: 4;
-    }
-}
-
-@media (min-width: 601px) {
-    .panel__menu {
-        display: block;
     }
 }
