--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,69 @@
-<div class="card">
+<div class="profile-content">
+  <div class="profile-title">
+    <h3>PROFILE</h3>
+  </div>
+  <div class="profile-card elevation-z6">
+    <img class="profile-card__img rounded-circle" src="../../../assets/img/profile_zoom.jpg">
+    <div class="profile-card__desc">
+      <div class="desc__text">
+        <h2 class="mb-0">Elliot Wilkinson</h2>
+        <h4 class="text-muted">Angular 2 & C# Expert</h4>
+      </div>
+      <div class="desc__buttons">
+        <button routerLink="/cv" routerLinkActive="active" md-raised-button color="primary">CV</button>
+        <button routerLink="/projects" routerLinkActive="active" md-raised-button color="primary">PROJECTS</button>
+      </div>
+    </div>
+    <div class="profile-card__contact">
+      <pre><code title="Location">L: London</code><br/><code title="Telephone">T: +447920752087</code><br/><code title="Work Email">W: <a href="mailto:Elliot.Wilkinson@wilkware.co.uk">Elliot.Wilkinson@wilkware.co.uk</a></code><br/><code title="Personal Email">P: <a href="mailto:PlantPorridge@gmail.com">PlantPorridge@gmail.com</a></code></pre>
+      <div class="contact__social">
+        <a href="https://github.com/PlantPorridge" target="_blank">
+              <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+        <a href="https://www.linkedin.com/in/elliot-wilkinson-a204b09b/" target="_blank">        
+              <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+            </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="profile-about elevation-z6">
+    <div class="card-header">
+      <div class="heading">
+        <h5 class="card-title mb-0">ABOUT</h5>
+      </div>
+    </div>
+    <div class="card-body">
+      <div class="about__bio">
+        <p>
+          Welcome to Wilkware. I'm Elliot Wilkinson and this is a site to showcase myself and my work! I've just moved into the world
+          of contracting and realised I needed some sort of portfolio site- and here we are! This site is new so is pretty
+          bare at the moment but over the next few months I hope to rectify that by working on more projects and expanding
+          the scope of this site to some more interesting aspects of myself.
+        </p>
+        <p>
+          So about me.<br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for 4 years;
+          One in C, Two in C#+WPF, and One in Typescript+Angular. But along the way I have dabbled in a whole range of other
+          languages and technologies which can be viewed on my <a routerLink="/cv" routerLinkActive="active">CV</a>. Angular
+          has been a welcome relief after breaking free from the shakles of WPF, and it is the Framework I consider myself
+          well versed in. So I am now operating out of my own company, Wilkware Limited, offering my software engineering
+          skills with a focus on C# and Angular.
+        </p>
+        <p>
+          Outside of coding I am an avid runner and triathlete. Completing my first marathon in 2016 I vowed to do one a month in 2017,
+          but injuring has currently put that on hold. I have currently completed 6 marathons this year and hopefully I can
+          squeeze in another 6 once my injuries are healed!
+        </p>
+      </div>
+      <div class="about__skills">
+        <span *ngFor="let skill of skills" class="badge badge-secondary">{{skill}}</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="card">
   <div class="card-header">
     <h1 class="mb-0">Welcome!</h1>
   </div>
@@ -26,4 +91,4 @@
       </p>
     </div>
   </div>
-</div>
+</div> -->
