--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,12 +1,18 @@
 :host {
     width: 100%;
     height: 100%;
+    margin: 0rem 2rem;
+}
+
+.projects-content {
+    display: grid;  
+    margin: 2rem 4rem;
+    grid-gap: 1rem;  
 }
 
 .projects-grid{
     display: grid;
     grid-gap: 10px;
-    margin: 10px;    
 }
 
 app-project-card {
@@ -31,3 +37,12 @@ app-project-card {
         grid-template-columns: 1fr;
     }
 }
+
+
+
+@media (max-width:500px){
+    
+        .projects-content {
+            margin: .5rem 1rem;
+        }
+    }
