--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,26 @@ html, body {
     overflow-y: hidden;
 }
 
+body {
+    font-family: Roboto;
+    /* background-color: #ccc; */
+}
+
+body > svg {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
 .list-group-item.active{
     background-color: #17a2b8;
     border-color: #17a2b8;
     text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 }
+
+/* Pulled from Angular Material */
+.elevation-z6 {
+    box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12)
+}
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
