--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,7 +51,7 @@
         </p>
         <p>
           Outside of coding I am an avid runner and triathlete. Completing my first marathon in 2016 I vowed to do one a month in 2017,
-          but injuring has currently put that on hold. I have currently completed 6 marathons this year and hopefully I can
+          but injuring myself has currently put that on hold. I have currently completed 6 marathons this year and hopefully I can
           squeeze in another 6 once my injuries are healed!
         </p>
       </div>
