--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,19 +10,19 @@
         <h4 class="text-muted">Angular 2 & C# Expert</h4>
       </div>
       <div class="desc__buttons">
-        <button routerLink="/cv" routerLinkActive="active" md-raised-button color="primary">CV</button>
-        <button routerLink="/projects" routerLinkActive="active" md-raised-button color="primary">PROJECTS</button>
+        <button routerLink="/cv" routerLinkActive="active" mat-raised-button color="primary">CV</button>
+        <button routerLink="/projects" routerLinkActive="active" mat-raised-button color="primary">PROJECTS</button>
       </div>
     </div>
     <div class="profile-card__contact">
       <pre><code title="Location">L: London</code><br/><code title="Telephone">T: +447920752087</code><br/><code title="Work Email">W: <a href="mailto:Elliot.Wilkinson@wilkware.co.uk">Elliot.Wilkinson@wilkware.co.uk</a></code><br/><code title="Personal Email">P: <a href="mailto:PlantPorridge@gmail.com">PlantPorridge@gmail.com</a></code></pre>
       <div class="contact__social">
         <a href="https://github.com/PlantPorridge" target="_blank">
-              <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-            </a>
-        <a href="https://www.linkedin.com/in/elliot-wilkinson-a204b09b/" target="_blank">        
-              <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-            </a>
+          <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/elliot-wilkinson-a204b09b/" target="_blank">
+          <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+        </a>
       </div>
     </div>
   </div>
@@ -42,17 +42,18 @@
           the scope of this site to some more interesting aspects of myself.
         </p>
         <p>
-          So about me.<br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for 4 years;
-          One in C, Two in C#+WPF, and One in Typescript+Angular. But along the way I have dabbled in a whole range of other
-          languages and technologies which can be viewed on my <a routerLink="/cv" routerLinkActive="active">CV</a>. Angular
-          has been a welcome relief after breaking free from the shakles of WPF, and it is the Framework I consider myself
-          well versed in. So I am now operating out of my own company, Wilkware Limited, offering my software engineering
-          skills with a focus on C# and Angular.
+          So about me.
+          <br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for 4 years; One in C, Two
+          in C#+WPF, and One in Typescript+Angular. But along the way I have dabbled in a whole range of other languages
+          and technologies which can be viewed on my
+          <a routerLink="/cv" routerLinkActive="active">CV</a>. Angular has been a welcome relief after breaking free from the shakles of WPF, and it is the Framework
+          I consider myself well versed in. So I am now operating out of my own company, Wilkware Limited, offering my software
+          engineering skills with a focus on C# and Angular.
         </p>
         <p>
           Outside of coding I am an avid runner and triathlete. Completing my first marathon in 2016 I vowed to do one a month in 2017,
-          but injuring myself has currently put that on hold. I have currently completed 6 marathons this year and hopefully I can
-          squeeze in another 6 once my injuries are healed!
+          but injuring myself has currently put that on hold. I have currently completed 6 marathons this year and hopefully
+          I can squeeze in another 6 once my injuries are healed!
         </p>
       </div>
       <div class="about__skills">
