--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,17 +43,17 @@
         </p>
         <p>
           So about me.
-          <br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for 4 years; One in C, Two
-          in C#+WPF, and One in Typescript+Angular. But along the way I have dabbled in a whole range of other languages
-          and technologies which can be viewed on my
+          <br/> I hold a degree is Discrete Mathematics and have been working in Software Engineering for almost 5 years; One
+          in C, Two in C#+WPF, and Two in Typescript+Angular. But along the way I have dabbled in a whole range of other
+          languages and technologies which can be viewed on my
           <a routerLink="/cv" routerLinkActive="active">CV</a>. Angular has been a welcome relief after breaking free from the shakles of WPF, and it is the Framework
           I consider myself well versed in. So I am now operating out of my own company, Wilkware Limited, offering my software
           engineering skills with a focus on C# and Angular.
         </p>
         <p>
           Outside of coding I am an avid runner and triathlete. Completing my first marathon in 2016 I vowed to do one a month in 2017,
-          but injuring myself has currently put that on hold. I have currently completed 6 marathons this year and hopefully
-          I can squeeze in another 6 once my injuries are healed!
+          but injuring myself put that on hold. I only managed to complete 6 marathons in 2017 but I made up for it by spending
+          two months by doing a solo bicycle tour of the East Coast USA!
         </p>
       </div>
       <div class="about__skills">
