--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,11 +3,11 @@
     <h3>PROFILE</h3>
   </div>
   <div class="profile-card elevation-z6">
-    <img class="profile-card__img rounded-circle" src="../../../assets/img/profile_zoom.jpg">
+    <img class="profile-card__img rounded-circle" src="assets/img/profile_zoom.jpg">
     <div class="profile-card__desc">
       <div class="desc__text">
         <h2 class="mb-0">Elliot Wilkinson</h2>
-        <h4 class="text-muted">Angular 2 & C# Expert</h4>
+        <h4 class="text-muted">Angular 2+ & C# Expert</h4>
       </div>
       <div class="desc__buttons">
         <button routerLink="/cv" routerLinkActive="active" mat-raised-button color="primary">CV</button>
